增加rc4 加密